@@ -539,6 +539,7 @@ PP_SRC_ROOT=Source Files Folder:
 PP_LOC_ROOT=Translated Files Folder:
 
 PP_GLOS_ROOT=Glossary Folder:
+PP_WRITEABLE_GLOS=Writeable Glossary File:
 
 PP_TM_ROOT=Translation Memory Folder:
 
@@ -555,6 +556,7 @@ PP_BUTTON_BROWSE_SRC=&Browse
 PP_BUTTON_BROWSE_TAR=B&rowse
 
 PP_BUTTON_BROWSE_GL=Bro&wse
+PP_BUTTON_BROWSE_WG=Browse
 
 PP_BUTTON_BROWSE_TM=Brows&e
 
@@ -569,6 +571,8 @@ PP_BROWSE_TITLE_GLOS=Glossary Files Folder
 PP_BROWSE_TITLE_TM=Translation Memory Files Folder
 
 PP_BROWSE_TITLE_DICT=Dictionary Files Folder
+
+PP_BROWSE_W_GLOS=Writeable Glossary File
 
 PP_MESSAGE_BADPROJ=\
     Some project folders seem to have been moved. \n\
@@ -599,6 +603,8 @@ NP_SOURCEDIR_DOESNT_EXIST=Source files folder entered does not exist!
 NP_TRANSDIR_DOESNT_EXIST=Translated files folder entered does not exist!
 
 NP_GLOSSDIR_DOESNT_EXIST=Glossary files folder entered does not exist!
+NP_W_GLOSSDIR_DOESNT_EXIST=Writeable glossary file folder entered does not exist!
+NP_W_GLOSDIR_NOT_INSIDE_GLOS=The writeable glossary file must be inside the glossary folder
 
 NP_TMDIR_DOESNT_EXIST=Translation memory files folder entered does not exist!
 
@@ -1600,3 +1606,4 @@ PROJECT_SOURCE_FOLDER=Source folder {0} does not exist.
 PROJECT_TARGET_FOLDER=Target folder {0} does not exist.
 PROJECT_GLOSSARY_FOLDER=Glossary folder {0} does not exist.
 PROJECT_TM_FOLDER=Translation memory folder {0} does not exist.
+PROJECT_W_GLOSSARY=The writeable glossary file is not in the glossary folder.
